syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/http.proto";

option csharp_namespace = "GrpcServiceServerTest";

package test;

// The service definition
service Tester {
  rpc SayTest (TestRequest) returns (TestReply){
    option (google.api.http) = {
      post: "/SayTest"
    };
  }
  rpc SayTestStream (TestRequest) returns (stream TestReply){
    option (google.api.http) = {
      post: "/SayTestStream"
    };
  }
}

message TestRequest {
  string name = 1;
}

message TestReply {
  string message = 1;
  repeated string addresses = 2;
}
